<?xml version="1.0"?>
<package format="3">
  <name>waterlinked_3d_sonar_driver</name>
  <version>0.0.1</version>
  <description>ROS2 driver for Water Linked Sonar 3D-15</description>
  <maintainer email="chrimai@energy.aau.dk">Christian Mai</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3</exec_depend>
  <!-- <exec_depend>numpy</exec_depend> -->
  <exec_depend>protobuf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
